--- a/A03_SOMA_CODINGTEST/B_06_10/C06_D-25_260210.ipynb
+++ b/A03_SOMA_CODINGTEST/B_06_10/C06_D-25_260210.ipynb
@@ -5,10 +5,19 @@
    "execution_count": null,
    "id": "62fc32a4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "96\n"
+     ]
+    }
+   ],
    "source": [
     "# 1. 알고(구현): 백준 2567 (색종이 - 2) - https://www.acmicpc.net/problem/2567\n",
     "import sys\n",
+    "from itertools import product\n",
     "\n",
     "from io import StringIO\n",
     "sys.stdin = StringIO('''4\n",
@@ -22,10 +31,40 @@
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    board = [[0] * 102 for _ in range(102)]\n",
+    "    dirs = ((0, +1), (0, -1), (+1, 0), (-1, 0))\n",
+    "\n",
+    "    N = int(input())\n",
+    "\n",
+    "    min_r, min_c = 100, 100\n",
+    "    max_r, max_c = 0, 0\n",
+    "\n",
+    "    for _ in range(N):\n",
+    "        r, c = map(int, input().split())\n",
+    "\n",
+    "        # 최대 최소 범위 찾기\n",
+    "        min_r, min_c = min(min_r, r), min(min_c, c)\n",
+    "        max_r, max_c = max(max_r, r), max(max_c, c)\n",
+    "\n",
+    "        for i in range(r, r + 10):\n",
+    "            for j in range(c, c + 10):\n",
+    "                board[i][j] = 1\n",
+    "\n",
+    "    r_range = range(min_r, max_r + 11)\n",
+    "    c_range = range(min_c, max_c + 11)\n",
+    "\n",
+    "    edge_length = 0\n",
+    "\n",
+    "    for r, c in product(r_range, c_range):\n",
+    "        if board[r][c] == 1:\n",
+    "            for dr, dc in dirs:\n",
+    "                if board[r + dr][c + dc] == 0:\n",
+    "                    edge_length += 1\n",
+    "\n",
+    "    print(edge_length)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -33,23 +72,61 @@
    "execution_count": null,
    "id": "5f85729d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "0\n"
+     ]
+    }
+   ],
    "source": [
     "# 2. 알고(수학): 백준 1004 (어린 왕자) - https://www.acmicpc.net/problem/1004\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''2\n",
+    "-5 1 12 1\n",
+    "7\n",
+    "1 1 8\n",
+    "-3 -1 1\n",
+    "2 2 2\n",
+    "5 5 1\n",
+    "-4 5 1\n",
+    "12 1 1\n",
+    "12 1 2\n",
+    "-5 1 5 1\n",
+    "1\n",
+    "0 0 2''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
+    "def get_dist_sq(x1, y1, x2, y2):\n",
+    "        return (x2 - x1)**2 + (y2 - y1)**2\n",
     "\n",
     "def solve():\n",
+    "    sx, sy, ex, ey = map(int, input().split())\n",
+    "    N = int(input())\n",
     "\n",
-    "    pass\n",
+    "    count = 0\n",
+    "    for _ in range(N):\n",
+    "        x, y, r = map(int, input().split())\n",
+    "        r_sq = r ** 2\n",
+    "\n",
+    "        start_in_circle = get_dist_sq(sx, sy, x, y) < r_sq\n",
+    "        end_in_circle = get_dist_sq(ex, ey, x, y) < r_sq\n",
+    "\n",
+    "        if start_in_circle != end_in_circle:\n",
+    "            count += 1\n",
+    "\n",
+    "    print(count)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "T = int(input())\n",
+    "for _ in range(T):\n",
+    "    solve()"
    ]
   },
   {
@@ -57,47 +134,93 @@
    "execution_count": null,
    "id": "be7d35ea",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Askar\n",
+      "Artem\n"
+     ]
+    }
+   ],
    "source": [
     "# 3. 알고(Map): 백준 7785 (회사에 있는 사람) - https://www.acmicpc.net/problem/7785\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''4\n",
+    "Baha enter\n",
+    "Askar enter\n",
+    "Baha leave\n",
+    "Artem enter''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    N = int(input())\n",
     "\n",
-    "    pass\n",
+    "    working = set()\n",
+    "    for _ in range(N):\n",
+    "        name, info = input().rsplit()\n",
+    "        if info == 'enter':\n",
+    "            working.add(name)\n",
+    "        else:\n",
+    "            working.discard(name)\n",
+    "    existing = list(working)\n",
+    "    existing.sort(reverse=True)\n",
+    "\n",
+    "    print(\"\\n\".join(existing))\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "id": "9ab6f72b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. 알고(그리디): 백준 1449 (수리공 항승) - https://www.acmicpc.net/problem/1449\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''4 3\n",
+    "1 2 3 4''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    N, L = map(int, input().split())\n",
+    "\n",
+    "    leaks = list(map(int, input().split()))\n",
+    "    leaks.sort()\n",
+    "\n",
+    "    count = 0\n",
+    "    last_fix = 0  # 마지막 수리 지점\n",
+    "\n",
+    "    for location in leaks:\n",
+    "        if location > last_fix:\n",
+    "            count += 1\n",
+    "            last_fix = location + L - 1\n",
+    "\n",
+    "    print(count)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -106,7 +229,22 @@
    "metadata": {},
    "source": [
     "```sql\n",
-    "-- 5. SQL(Lv.2): 중성화 여부 파악하기 - https://school.programmers.co.kr/learn/courses/30/lessons/59409\n",
+    "-- 5. SQL(Lv.2): 중성화 여부 파악하기 \n",
+    "-- https://school.programmers.co.kr/learn/courses/30/lessons/59409\n",
+    "SELECT\n",
+    "    ANIMAL_ID,\n",
+    "    NAME,\n",
+    "    CASE\n",
+    "        WHEN\n",
+    "            SEX_UPON_INTAKE LIKE '%Neutered%'\n",
+    "            OR SEX_UPON_INTAKE LIKE '%Spayed%'\n",
+    "        THEN 'O'\n",
+    "        ELSE 'X'\n",
+    "    END AS 중성화\n",
+    "FROM\n",
+    "    ANIMAL_INS\n",
+    "ORDER BY\n",
+    "    ANIMAL_ID;\n",
     "```"
    ]
   },
@@ -115,23 +253,84 @@
    "execution_count": null,
    "id": "d4d305b0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "27\n"
+     ]
+    }
+   ],
    "source": [
     "# 1. 알고(시뮬): 백준 14502 (연구소) - https://www.acmicpc.net/problem/14502\n",
     "import sys\n",
+    "from itertools import product, combinations\n",
+    "from collections import deque\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''7 7\n",
+    "2 0 0 0 1 1 0\n",
+    "0 0 1 0 1 2 0\n",
+    "0 1 1 0 1 0 0\n",
+    "0 1 0 0 0 0 0\n",
+    "0 0 0 0 0 1 1\n",
+    "0 1 0 0 0 0 0\n",
+    "0 1 0 0 0 0 0''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    N, M = map(int, input().split())\n",
     "\n",
-    "    pass\n",
+    "    room = [[1] * (M + 2)]\n",
+    "    for _ in range(N):\n",
+    "        room.append([1] + list(map(int, input().split())) + [1])\n",
+    "    room.append([1] * (M + 2))\n",
+    "\n",
+    "    directions = [(0, +1), (0, -1), (-1, 0), (+1, 0)]\n",
+    "    virus = []\n",
+    "    emptys = []\n",
+    "\n",
+    "    # 바이러스 & 빈공간 위치 탐지\n",
+    "    for r, c in product(range(1, N + 1), range(1, M + 1)):\n",
+    "        if room[r][c] == 2:\n",
+    "            virus.append((r, c))\n",
+    "        elif room[r][c] == 0:\n",
+    "            emptys.append((r, c))\n",
+    "\n",
+    "    emptys_size = len(emptys)\n",
+    "\n",
+    "    # 바이러스 중심으로 확산 후, 감염 안된 셀 개수 찾기.\n",
+    "    def virus_start(three_wall_set):\n",
+    "        injected_set = set()\n",
+    "        dq = deque(virus)  # 모든 바이러스 넣고 시작\n",
+    "\n",
+    "        while dq:\n",
+    "            r, c = dq.popleft()\n",
+    "            for dr, dc in directions:\n",
+    "                nr, nc = r + dr, c + dc\n",
+    "\n",
+    "                if room[nr][nc] == 0:  # 빈칸이고, 감염아직 안되고, 추가된 벽이 아니면\n",
+    "                    nxt_rc = (nr, nc)\n",
+    "                    if nxt_rc not in injected_set \\\n",
+    "                            and nxt_rc not in three_wall_set:\n",
+    "                        dq.append(nxt_rc)\n",
+    "                        injected_set.add(nxt_rc)\n",
+    "\n",
+    "        return emptys_size - len(injected_set) - len(three_wall_set)\n",
+    "\n",
+    "    # 벽 세울 후보군 선정, 컴비네이션으로 3개 세우고 확산\n",
+    "    max_val = 0\n",
+    "    for three_wall in combinations(emptys, 3):\n",
+    "        empty_val = virus_start(set(three_wall))\n",
+    "        max_val = max(max_val, empty_val)\n",
+    "\n",
+    "    print(max_val)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -139,23 +338,45 @@
    "execution_count": null,
    "id": "44b2c219",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
    "source": [
     "# 2. 알고(DP): 백준 2293 (동전 1) - https://www.acmicpc.net/problem/2293\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''3 10\n",
+    "1\n",
+    "2\n",
+    "5''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    n, k = map(int, input().split())\n",
+    "    coins = [int(input()) for _ in range(n)]\n",
+    "    # dp[i] = i원을 만들 수 있는 경우의 수\n",
+    "    dp = [0] * (k+1)\n",
+    "    dp[0] = 1\n",
     "\n",
-    "    pass\n",
+    "    for coin in coins:\n",
+    "        for i in range(coin, k + 1):\n",
+    "\n",
+    "            # 코인을 안쓰고 기존 방식 + 코인을 쓰고 가격을 추가한 방식\n",
+    "            dp[i] += dp[i - coin]\n",
+    "\n",
+    "    print(dp[k])\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -163,23 +384,75 @@
    "execution_count": null,
    "id": "7310d5de",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23\n"
+     ]
+    }
+   ],
    "source": [
     "# 3. 알고(그래프): 백준 14938 (서강그라운드) - https://www.acmicpc.net/problem/14938\n",
     "import sys\n",
+    "from heapq import heappush, heappop\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''5 5 4\n",
+    "5 7 8 2 3\n",
+    "1 4 5\n",
+    "5 2 4\n",
+    "3 2 3\n",
+    "1 2 3''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    n, m, r = map(int, input().split())\n",
     "\n",
-    "    pass\n",
+    "    items = tuple(map(int, input().split()))\n",
+    "\n",
+    "    graph = [[] for _ in range(n+1)]\n",
+    "\n",
+    "    for _ in range(r):\n",
+    "        s, e, c = map(int, input().split())\n",
+    "        graph[s].append((e, c))\n",
+    "        graph[e].append((s, c))\n",
+    "\n",
+    "    # 방문한 노드의 아이템 총 합계\n",
+    "    def check_items(start):\n",
+    "\n",
+    "        min_dist = [float('inf')] * (n + 1)\n",
+    "        min_dist[start] = 0\n",
+    "        pq = [(0, start)]\n",
+    "\n",
+    "        while pq:\n",
+    "            cur_dist, cur = heappop(pq)\n",
+    "            if cur_dist > min_dist[cur]:\n",
+    "                continue\n",
+    "\n",
+    "            for nxt, cost in graph[cur]:\n",
+    "                nxt_dist = cur_dist + cost\n",
+    "                if nxt_dist < min_dist[nxt]:\n",
+    "                    heappush(pq, (nxt_dist, nxt))\n",
+    "                    min_dist[nxt] = nxt_dist\n",
+    "\n",
+    "        # 다익스트라로 모두 조사한 한뒤 필터\n",
+    "        can_visit = [v for v in range(1, n + 1) if min_dist[v] <= m]\n",
+    "        return sum(map(lambda x: items[x - 1], can_visit))\n",
+    "\n",
+    "    max_val = 0\n",
+    "    for start in range(1, n + 1):\n",
+    "        sum_val = check_items(start)\n",
+    "        if sum_val > max_val:\n",
+    "            max_val = sum_val\n",
+    "\n",
+    "    print(max_val)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -187,23 +460,91 @@
    "execution_count": null,
    "id": "f78dd7c6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. 알고(백트래킹): 백준 15684 (사다리 조작) - https://www.acmicpc.net/problem/15684\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''5 5 6\n",
+    "1 1\n",
+    "3 2\n",
+    "2 3\n",
+    "5 1\n",
+    "5 4''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    N, M, H = map(int, input().split())\n",
+    "    # 패딩을 포함한 사다리 맵 (N+2)\n",
+    "    board = [[False] * (N + 2) for _ in range(H + 1)]\n",
     "\n",
-    "    pass\n",
+    "    for _ in range(M):\n",
+    "        a, b = map(int, input().split())\n",
+    "        board[a][b] = True\n",
+    "\n",
+    "    # 사다리 놓을 수 있는 후보지 미리 추출\n",
+    "    candidates = []\n",
+    "    for i in range(1, H + 1):\n",
+    "        for j in range(1, N):\n",
+    "            if not board[i][j] and not board[i][j-1] and not board[i][j+1]:\n",
+    "                candidates.append((i, j))\n",
+    "\n",
+    "    # 현재 상태에서 결과가 다른 세로선의 개수 카운트\n",
+    "    def count_wrong():\n",
+    "        wrong = 0\n",
+    "        for start in range(1, N + 1):\n",
+    "            curr = start\n",
+    "            for h in range(1, H + 1):\n",
+    "                if board[h][curr]:\n",
+    "                    curr += 1\n",
+    "                elif board[h][curr-1]:\n",
+    "                    curr -= 1\n",
+    "            if curr != start:\n",
+    "                wrong += 1\n",
+    "        return wrong\n",
+    "\n",
+    "    def dfs(cnt, target, idx):\n",
+    "        wrong_cnt = count_wrong()\n",
+    "\n",
+    "        if wrong_cnt == 0:\n",
+    "            return True\n",
+    "        # [가지치기] 남은 기회로 틀린 선을 모두 고칠 수 없는 경우\n",
+    "        if wrong_cnt > 2 * (target - cnt):\n",
+    "            return False\n",
+    "        if cnt == target:\n",
+    "            return False\n",
+    "\n",
+    "        for i in range(idx, len(candidates)):\n",
+    "            r, c = candidates[i]\n",
+    "            # 인접한 곳에 사다리가 없을 때만 설치\n",
+    "            if not board[r][c-1] and not board[r][c+1]:\n",
+    "                board[r][c] = True\n",
+    "                if dfs(cnt + 1, target, i + 1):\n",
+    "                    return True\n",
+    "                board[r][c] = False\n",
+    "        return False\n",
+    "\n",
+    "    # 0개부터 3개까지 순차 시도\n",
+    "    for limit in range(4):\n",
+    "        if dfs(0, limit, 0):\n",
+    "            print(limit)\n",
+    "            return\n",
+    "\n",
+    "    print(-1)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -213,14 +554,46 @@
    "source": [
     "```sql\n",
     "-- 5. SQL(Lv.3): 즐겨찾기가 가장 많은 식당 정보 출력하기 - https://school.programmers.co.kr/learn/courses/30/lessons/131123\n",
-    "\n",
+    "SELECT\n",
+    "    FOOD_TYPE,\n",
+    "    REST_ID,\n",
+    "    REST_NAME,\n",
+    "    FAVORITES\n",
+    "FROM \n",
+    "    REST_INFO\n",
+    "WHERE\n",
+    "    (FOOD_TYPE, FAVORITES) IN (\n",
+    "        SELECT\n",
+    "            FOOD_TYPE,\n",
+    "            MAX(FAVORITES)\n",
+    "        FROM\n",
+    "            REST_INFO\n",
+    "        GROUP BY\n",
+    "            FOOD_TYPE\n",
+    "    )\n",
+    "ORDER BY\n",
+    "    FOOD_TYPE DESC;\n",
     "```"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "251117_MathForPython",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
