--- a/A03_SOMA_CODINGTEST/B_06_10/C07_D-24_260211.ipynb
+++ b/A03_SOMA_CODINGTEST/B_06_10/C07_D-24_260211.ipynb
@@ -2,26 +2,58 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "62fc32a4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
+    "# 1. 알고(구현): 백준 13335 (트럭) - https://www.acmicpc.net/problem/13335\n",
     "import sys\n",
+    "from collections import deque\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''4 2 10\n",
+    "7 4 5 6''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    n, w, L = map(int, input().split())\n",
+    "    trucks = deque(map(int, input().split()))\n",
+    "    bridge = deque([0] * w)\n",
+    "\n",
+    "    time = 1\n",
+    "    cur_weight = trucks.popleft()\n",
+    "    bridge.append(cur_weight)   # 다리위에 올리고\n",
+    "    bridge.popleft()            # 다리에서 하나 뺴고\n",
+    "\n",
+    "    while trucks:\n",
+    "        time += 1\n",
+    "        cur_weight -= bridge.popleft()\n",
+    "\n",
+    "        # 다리 올라갈 수 있으면\n",
+    "        if cur_weight + trucks[0] <= L:\n",
+    "            truck = trucks.popleft()\n",
+    "            bridge.append(truck)     # 다리 위에 올리고\n",
+    "            cur_weight += truck      # 다리 중량 추가하고\n",
+    "\n",
+    "        else:  # 못 올라가면\n",
+    "            bridge.append(0)         # 빈공간 추가\n",
+    "\n",
+    "    print(time + w)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -29,23 +61,39 @@
    "execution_count": null,
    "id": "5f85729d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
+    "# 2. 알고(수학): 백준 1057 (토너먼트) - https://www.acmicpc.net/problem/1057\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''65536 1000 35000''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    N, kim, eim = map(int, input().split())\n",
+    "\n",
+    "    count = 0\n",
+    "    while kim != eim:\n",
+    "        count += 1\n",
+    "        kim = (kim + 1) // 2\n",
+    "        eim = (eim + 1) // 2\n",
+    "\n",
+    "    print(count)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -53,21 +101,45 @@
    "execution_count": null,
    "id": "be7d35ea",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "baesangwook\n",
+      "ohhenrie\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
+    "# 3. 알고(Map): 백준 1764 (듣보잡) - https://www.acmicpc.net/problem/1764\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''3 4\n",
+    "ohhenrie\n",
+    "charlie\n",
+    "baesangwook\n",
+    "obama\n",
+    "baesangwook\n",
+    "ohhenrie\n",
+    "clinton''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    N, M = map(int, input().split())\n",
     "\n",
-    "    pass\n",
+    "    not_heard = set([input().rstrip() for _ in range(N)])\n",
+    "    not_seen = set([input().rstrip() for _ in range(M)])\n",
+    "    \n",
+    "    not_seens_heard = list(not_heard.intersection(not_seen))\n",
+    "    not_seens_heard.sort()\n",
     "\n",
+    "    print(len(not_seens_heard))\n",
+    "    print(\"\\n\".join(not_seens_heard))\n",
     "\n",
     "solve()\n"
    ]
@@ -77,23 +149,53 @@
    "execution_count": null,
    "id": "9ab6f72b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
+    "# 4. 알고(그리디): 백준 11000 (강의실 배정) - https://www.acmicpc.net/problem/11000\n",
     "import sys\n",
+    "from collections import deque\n",
+    "from heapq import heappop, heappush\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''3\n",
+    "1 3\n",
+    "2 4\n",
+    "3 5''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    N = int(input())\n",
+    "    lectures = [tuple(map(int, input().split())) for _ in range(N)]\n",
+    "    lectures.sort()\n",
+    "    dq = deque(lectures)\n",
     "\n",
-    "    pass\n",
+    "    pq_rooms = []  # (끝나는 시간, [(),()]  튜플 배열) - 첫 수업 배정\n",
+    "\n",
+    "    while dq:\n",
+    "        start, end = dq.popleft()  # 수강 신청할 수업\n",
+    "\n",
+    "        # 룸이 비어있거나, 제일 빨리 끝나는 방의 종료시간이 시작시간보다 크면\n",
+    "        if not pq_rooms or pq_rooms[0][0] > start:\n",
+    "            heappush(pq_rooms, (end, [(start, end)]))  # 새 강의실 배정\n",
+    "        else:\n",
+    "            end_time, letures = heappop(pq_rooms)\n",
+    "            letures.append((start, end))            # 강의실 추가하고\n",
+    "            heappush(pq_rooms, (end, letures))      # 종료시간 갱신해서 재 삽입\n",
+    "\n",
+    "    print(len(pq_rooms))\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -102,32 +204,18 @@
    "metadata": {},
    "source": [
     "```sql\n",
-    "\n",
+    "-- 5. SQL(Lv.2): 카테고리 별 상품 개수 구하기 \n",
+    "-- https://school.programmers.co.kr/learn/courses/30/lessons/131529\n",
+    "SELECT\n",
+    "    LEFT(PRODUCT_CODE, 2) AS CATEGORY,\n",
+    "    COUNT(*) AS PRODUCTS\n",
+    "FROM\n",
+    "    PRODUCT\n",
+    "GROUP BY\n",
+    "    CATEGORY\n",
+    "ORDER BY\n",
+    "    CATEGORY;\n",
     "```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d4d305b0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "import sys\n",
-    "\n",
-    "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
-    "\n",
-    "input = sys.stdin.readline\n",
-    "\n",
-    "\n",
-    "def solve():\n",
-    "\n",
-    "    pass\n",
-    "\n",
-    "\n",
-    "solve()\n"
    ]
   },
   {
@@ -135,47 +223,173 @@
    "execution_count": null,
    "id": "44b2c219",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "54\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
+    "# 1. 알고(시뮬): 백준 21608 (상어 초등학교) - https://www.acmicpc.net/problem/21608\n",
     "import sys\n",
+    "from heapq import heappop, heappush\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''3\n",
+    "4 2 5 1 7\n",
+    "3 1 9 4 5\n",
+    "9 8 1 2 3\n",
+    "8 1 9 3 4\n",
+    "7 2 3 4 8\n",
+    "1 9 2 5 7\n",
+    "6 5 2 3 4\n",
+    "5 1 9 2 8\n",
+    "2 9 3 1 4''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    N = int(input())\n",
+    "    directions = [(-1, 0), (+1, 0), (0, -1), (0, +1)]\n",
+    "\n",
+    "    room = [[-1] * (N + 2)]\n",
+    "    for _ in range(N):\n",
+    "        room.append([-1] + ([0] * N) + [-1])\n",
+    "    room.append([-1] * (N + 2))\n",
+    "\n",
+    "    empty_set = set((r, c) for r in range(1, N+1) for c in range(1, N+1))\n",
+    "    likeinfo = [tuple(map(int, input().split())) for _ in range(N*N)]\n",
+    "    student_sits = dict()\n",
+    "    # 좌석값 리턴\n",
+    "\n",
+    "    def find_set(a, b, c, d):\n",
+    "        likes = set([a, b, c, d])\n",
+    "        candi_pq = []  # heap 으로 (-like, -empty, 행, 열) 순서 항상 유지.\n",
+    "        for r, c in empty_set:\n",
+    "            like_count = 0\n",
+    "            empty_count = 0\n",
+    "\n",
+    "            for dr, dc in directions:\n",
+    "                nr, nc = r + dr, c + dc\n",
+    "                sit_val = room[nr][nc]\n",
+    "\n",
+    "                if sit_val == 0:\n",
+    "                    empty_count += 1\n",
+    "                elif sit_val in likes:\n",
+    "                    like_count += 1\n",
+    "\n",
+    "            heappush(candi_pq, (-like_count, -empty_count, r, c))\n",
+    "        _, _, fr, fc = heappop(candi_pq)\n",
+    "        return fr, fc\n",
+    "\n",
+    "    # 학생 배치 시작\n",
+    "    for num, a, b, c, d in likeinfo:\n",
+    "        fr, fc = find_set(a, b, c, d)\n",
+    "        room[fr][fc] = num\n",
+    "        student_sits[num] = (fr, fc)    # 학생 위치 기록.\n",
+    "        empty_set.remove((fr, fc))\n",
+    "\n",
+    "    # 점수 계산\n",
+    "    sum_val = 0\n",
+    "    for num, a, b, c, d in likeinfo:\n",
+    "        likes = set([a, b, c, d])\n",
+    "        r, c = student_sits[num]\n",
+    "        like_count = 0\n",
+    "\n",
+    "        for dr, dc in directions:\n",
+    "            nr, nc = r + dr, c + dc\n",
+    "            if room[nr][nc] in likes:\n",
+    "                like_count += 1\n",
+    "\n",
+    "        if like_count > 0:\n",
+    "            sum_val += 10**(like_count - 1)\n",
+    "\n",
+    "    print(sum_val)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 160,
    "id": "7310d5de",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "300\n",
+      "864\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
+    "# 2. 알고(DP): 백준 11066 (파일 합치기) - https://www.acmicpc.net/problem/11066\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''2\n",
+    "4\n",
+    "40 30 30 50\n",
+    "15\n",
+    "1 21 3 4 5 35 5 4 3 5 98 21 14 17 32''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    K = int(input())\n",
+    "    files = tuple(map(int, input().split()))\n",
+    "\n",
+    "    S = [0] * (K+1)\n",
+    "    for i in range(K):\n",
+    "        S[i+1] = S[i] + files[i]\n",
+    "\n",
+    "    # dp[i][j] = i 부터 j 까지 합치는 최소 비용\n",
+    "    # dp[i][j] = dp[i][k] + dp[k+1][j] + sum(i ~ k)\n",
+    "    # k[i][j] = i 부터 j까지 합칠 때 최소였던 k(중간) 값 저장\n",
+    "    dp = [[0]*K for _ in range(K)]\n",
+    "    kp = [[0]*K for _ in range(K)]\n",
+    "\n",
+    "    # 초기값 세팅\n",
+    "    for i in range(K - 1):\n",
+    "        kp[i][i+1] = i\n",
+    "        dp[i][i+1] = files[i] + files[i+1]\n",
+    "\n",
+    "    for length in range(3, K + 1):\n",
+    "        for i in range(K - length + 1):\n",
+    "            j = i + length - 1\n",
+    "\n",
+    "            best_k = 0\n",
+    "            min_cost = float('inf')\n",
+    "\n",
+    "            start_k = kp[i][j-1]\n",
+    "            end_k = kp[i+1][j]\n",
+    "\n",
+    "            for k in range(start_k, end_k + 1):\n",
+    "                best_cost = dp[i][k] + dp[k+1][j]\n",
+    "\n",
+    "                if best_cost < min_cost:\n",
+    "                    best_k = k\n",
+    "                    min_cost = best_cost\n",
+    "\n",
+    "            dp[i][j] = min_cost + (S[j + 1] - S[i])\n",
+    "            kp[i][j] = best_k\n",
+    "\n",
+    "    print(dp[0][K-1])\n",
     "\n",
     "\n",
-    "solve()\n"
+    "T = int(input())\n",
+    "for _ in range(T):\n",
+    "    solve()"
    ]
   },
   {
@@ -183,23 +397,158 @@
    "execution_count": null,
    "id": "f78dd7c6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 2 3 1 4\n",
+      "12 0 15 2 5\n",
+      "8 5 0 1 1\n",
+      "10 7 13 0 3\n",
+      "7 4 10 6 0\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
+    "# 3. 알고(그래프): 백준 11404 (플로이드) - https://www.acmicpc.net/problem/11404\n",
     "import sys\n",
+    "from itertools import product\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''5\n",
+    "14\n",
+    "1 2 2\n",
+    "1 3 3\n",
+    "1 4 1\n",
+    "1 5 10\n",
+    "2 4 2\n",
+    "3 4 1\n",
+    "3 5 1\n",
+    "4 5 3\n",
+    "3 5 10\n",
+    "3 1 8\n",
+    "1 4 2\n",
+    "5 1 7\n",
+    "3 4 2\n",
+    "5 2 4''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    n = int(input())\n",
+    "    m = int(input())\n",
+    "\n",
+    "    # min_dist[i][j] => i 에서 j 로 가는 최단거리\n",
+    "    dist = [[float('inf')] * (n + 1) for _ in range(n + 1)]\n",
+    "    indexs = tuple(product(range(1, n + 1), repeat=2))\n",
+    "\n",
+    "    for i in range(1, n + 1):\n",
+    "        dist[i][i] = 0\n",
+    "\n",
+    "    for _ in range(m):\n",
+    "        s, e, c = map(int, input().split())\n",
+    "        dist[s][e] = min(dist[s][e], c)\n",
+    "\n",
+    "    # 플로이드 워셜\n",
+    "    for k in range(1, n + 1):\n",
+    "        for i, j in indexs:\n",
+    "            dist[i][j] = min(dist[i][j], dist[i][k] + dist[k][j])\n",
+    "\n",
+    "    for row in dist[1:]:\n",
+    "        print(*[num if num != float('inf') else 0 for num in row[1:]])\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 244,
+   "id": "d4d305b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 4. 알고(백트래킹): 백준 17136 (색종이 붙이기) - https://www.acmicpc.net/problem/17136\n",
+    "import sys\n",
+    "from itertools import product\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''0 0 0 0 0 0 0 0 0 0\n",
+    "1 1 1 1 1 0 0 0 0 0\n",
+    "1 1 1 1 1 0 1 1 1 1\n",
+    "1 1 1 1 1 0 1 1 1 1\n",
+    "1 1 1 1 1 0 1 1 1 1\n",
+    "1 1 1 1 1 0 1 1 1 1\n",
+    "0 0 0 0 0 0 0 0 0 0\n",
+    "0 1 1 1 0 1 1 0 0 0\n",
+    "0 1 1 1 0 1 1 0 0 0\n",
+    "0 1 1 1 0 0 0 0 0 1''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "\n",
+    "def solve():\n",
+    "\n",
+    "    board = [list(map(int, input().split())) for _ in range(10)]\n",
+    "    paper = [0, 5, 5, 5, 5, 5]\n",
+    "    min_paper = float('inf')\n",
+    "\n",
+    "    def is_possible(r, c, length):\n",
+    "        if r + length > 10 or c + length > 10:\n",
+    "            return False\n",
+    "        for i in range(r, r + length):\n",
+    "            for j in range(c, c + length):\n",
+    "                if board[i][j] == 0:\n",
+    "                    return False\n",
+    "        return True\n",
+    "\n",
+    "    def mark(r, c, length, val):\n",
+    "        for i, j in product(range(r, r + length), range(c, c + length)):\n",
+    "            board[i][j] = val\n",
+    "\n",
+    "    def dfs(row, col, spend_paper):\n",
+    "        nonlocal min_paper\n",
+    "\n",
+    "        if row >= 10:                   # 가능한 색종이 다 붙임\n",
+    "            min_paper = min(min_paper, spend_paper)\n",
+    "            return\n",
+    "\n",
+    "        if col >= 10:                   # 다음 row 조사. col 초기화\n",
+    "            dfs(row + 1, 0, spend_paper)\n",
+    "            return\n",
+    "\n",
+    "        if spend_paper >= min_paper:     # 최소 종이보다 더 많이 필요하면 가지치기\n",
+    "            return\n",
+    "\n",
+    "        if board[row][col] == 1:        # 1이면 조사,\n",
+    "            for length in range(5, 0, -1):\n",
+    "                if paper[length] > 0 and is_possible(row, col, length):\n",
+    "\n",
+    "                    mark(row, col, length, 0)\n",
+    "                    paper[length] -= 1\n",
+    "                    dfs(row, col + 1, spend_paper + 1)\n",
+    "                    paper[length] += 1\n",
+    "                    mark(row, col, length, 1)\n",
+    "\n",
+    "        else:                           # 0이면 오른쪽 칸 이동\n",
+    "            dfs(row, col + 1, spend_paper)\n",
+    "\n",
+    "    dfs(0, 0, 0)\n",
+    "    print(min_paper if min_paper != float('inf') else -1)\n",
+    "\n",
+    "\n",
+    "solve()"
    ]
   },
   {
@@ -208,14 +557,41 @@
    "metadata": {},
    "source": [
     "```sql\n",
-    "\n",
+    "--5. SQL(Lv.3): 대여 기록이 존재하는 자동차 리스트 구하기 \n",
+    "-- https://school.programmers.co.kr/learn/courses/30/lessons/157341\n",
+    "SELECT\n",
+    "    DISTINCT C.CAR_ID\n",
+    "FROM \n",
+    "    CAR_RENTAL_COMPANY_CAR C\n",
+    "JOIN \n",
+    "    CAR_RENTAL_COMPANY_RENTAL_HISTORY H \n",
+    "    ON C.CAR_ID = H.CAR_ID\n",
+    "WHERE\n",
+    "    C.CAR_TYPE = '세단'\n",
+    "    AND MONTH(H.START_DATE) = 10 \n",
+    "ORDER BY\n",
+    "    C.CAR_ID DESC;\n",
     "```"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "251117_MathForPython",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
