--- a/A03_SOMA_CODINGTEST/B_06_10/C07_D-24_260211.ipynb
+++ b/A03_SOMA_CODINGTEST/B_06_10/C07_D-24_260211.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "62fc32a4",
    "metadata": {},
    "outputs": [
@@ -188,7 +188,7 @@
     "        if not pq_rooms or pq_rooms[0][0] > start:\n",
     "            heappush(pq_rooms, (end, [(start, end)]))  # 새 강의실 배정\n",
     "        else:\n",
-    "            end_time, letures = heappop(pq_rooms)\n",
+    "            _, letures = heappop(pq_rooms)\n",
     "            letures.append((start, end))            # 강의실 추가하고\n",
     "            heappush(pq_rooms, (end, letures))      # 종료시간 갱신해서 재 삽입\n",
     "\n",
