--- a/A03_SOMA_CODINGTEST/B_06_10/C08_D-23_260212.ipynb
+++ b/A03_SOMA_CODINGTEST/B_06_10/C08_D-23_260212.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 1. 알고(구현): 백준 20006 (랭킹전 대기열) - https://www.acmicpc.net/problem/20006\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -31,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 2. 알고(수학): 백준 17087 (숨바꼭질 6) - https://www.acmicpc.net/problem/17087\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -55,7 +55,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 3. 알고(Map): 백준 13414 (수강신청) - https://www.acmicpc.net/problem/13414\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -79,7 +79,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 4. 알고(그리디): 백준 16953 (A -> B) - https://www.acmicpc.net/problem/16953\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -102,7 +102,7 @@
    "metadata": {},
    "source": [
     "```sql\n",
-    "\n",
+    "-- 5. SQL(Lv.2): 자동차 평균 대여 기간 구하기 - https://school.programmers.co.kr/learn/courses/30/lessons/157342\n",
     "```"
    ]
   },
@@ -113,7 +113,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 1. 알고(시뮬): 백준 17140 (이차원 배열과 연산) - https://www.acmicpc.net/problem/17140\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -137,7 +137,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 2. 알고(DP): 백준 11054 (가장 긴 바이토닉 부분 수열) - https://www.acmicpc.net/problem/11054\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -161,7 +161,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 3. 알고(트리): 백준 1967 (트리의 지름) - https://www.acmicpc.net/problem/1967\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -185,7 +185,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 4. 알고(백트래킹): 백준 16197 (두 동전) - https://www.acmicpc.net/problem/16197\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -208,6 +208,7 @@
    "metadata": {},
    "source": [
     "```sql\n",
+    "-- 5. SQL(Lv.4): 식품분류별 가장 비싼 식품의 정보 조회하기 - https://school.programmers.co.kr/learn/courses/30/lessons/131116\n",
     "\n",
     "```"
    ]
