--- a/A03_SOMA_CODINGTEST/B_06_10/C08_D-23_260212.ipynb
+++ b/A03_SOMA_CODINGTEST/B_06_10/C08_D-23_260212.ipynb
@@ -5,23 +5,70 @@
    "execution_count": null,
    "id": "62fc32a4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Started!\n",
+      "10 a\n",
+      "15 b\n",
+      "20 c\n",
+      "17 f\n",
+      "18 g\n",
+      "Started!\n",
+      "25 d\n",
+      "30 e\n",
+      "26 h\n",
+      "24 i\n",
+      "28 j\n"
+     ]
+    }
+   ],
    "source": [
     "# 1. 알고(구현): 백준 20006 (랭킹전 대기열) - https://www.acmicpc.net/problem/20006\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''10 5\n",
+    "10 a\n",
+    "15 b\n",
+    "20 c\n",
+    "25 d\n",
+    "30 e\n",
+    "17 f\n",
+    "18 g\n",
+    "26 h\n",
+    "24 i\n",
+    "28 j''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    p, m = map(int, input().split())\n",
+    "    rooms = []\n",
+    "\n",
+    "    for _ in range(p):\n",
+    "        level, nick = input().split()\n",
+    "        level = int(level)\n",
+    "        for room in rooms:\n",
+    "            if len(room) < m:\n",
+    "                base_level = room[0][0]\n",
+    "                if base_level-10 <= level <= base_level+10:\n",
+    "                    room.append((level, nick))\n",
+    "                    break\n",
+    "        else:\n",
+    "            rooms.append([(level, nick)])\n",
+    "\n",
+    "    for room in rooms:\n",
+    "        print('Started!' if len(room) == m else 'Waiting!')\n",
+    "        room.sort(key=lambda x: (x[1]))\n",
+    "        print(\"\\n\".join(map(lambda x: f\"{x[0]} {x[1]}\", room)))\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -29,47 +76,83 @@
    "execution_count": null,
    "id": "5f85729d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24\n"
+     ]
+    }
+   ],
    "source": [
     "# 2. 알고(수학): 백준 17087 (숨바꼭질 6) - https://www.acmicpc.net/problem/17087\n",
     "import sys\n",
-    "\n",
+    "from math import gcd\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''3 81\n",
+    "33 105 57''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    N, S = map(int, input().split())\n",
+    "    nums = map(lambda x: abs(int(x) - S), input().split())\n",
+    "    print(gcd(*nums))\n",
     "\n",
-    "    pass\n",
     "\n",
-    "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "id": "be7d35ea",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20103324\n",
+      "20133221\n",
+      "20140101\n"
+     ]
+    }
+   ],
    "source": [
     "# 3. 알고(Map): 백준 13414 (수강신청) - https://www.acmicpc.net/problem/13414\n",
     "import sys\n",
+    "from itertools import islice\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''3 8\n",
+    "20103324\n",
+    "20133221\n",
+    "20133221\n",
+    "20093778\n",
+    "20140101\n",
+    "01234567\n",
+    "20093778\n",
+    "20103325''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    K, L = map(int, input().split())\n",
     "\n",
-    "    pass\n",
+    "    student_ids = dict()\n",
+    "\n",
+    "    for order in range(L):\n",
+    "        student_ids[input().rstrip()] = order\n",
+    "\n",
+    "    students = sorted(student_ids.items(), key=lambda x: x[1])\n",
+    "    print(\"\\n\".join(stu_id for stu_id, _ in islice(students, K)))\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -77,23 +160,54 @@
    "execution_count": null,
    "id": "9ab6f72b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. 알고(그리디): 백준 16953 (A -> B) - https://www.acmicpc.net/problem/16953\n",
     "import sys\n",
+    "from collections import deque\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''100 40021''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    A, B = map(int, input().split())\n",
+    "\n",
+    "    dq = deque([(A, 1)])  # 숫자, 깊이\n",
+    "    answer = -1\n",
+    "\n",
+    "    while dq:\n",
+    "        cur, depth = dq.popleft()\n",
+    "        depth += 1\n",
+    "\n",
+    "        nxt_mul = cur * 2\n",
+    "        nxt_add = int(str(cur) + '1')\n",
+    "\n",
+    "        if nxt_mul == B or nxt_add == B:\n",
+    "            answer = depth\n",
+    "            break\n",
+    "\n",
+    "        if nxt_mul < B:\n",
+    "            dq.append((nxt_mul, depth))\n",
+    "\n",
+    "        if nxt_add < B:\n",
+    "            dq.append((nxt_add, depth))\n",
+    "\n",
+    "    print(answer)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -102,7 +216,20 @@
    "metadata": {},
    "source": [
     "```sql\n",
-    "-- 5. SQL(Lv.2): 자동차 평균 대여 기간 구하기 - https://school.programmers.co.kr/learn/courses/30/lessons/157342\n",
+    "-- 5. SQL(Lv.2): 자동차 평균 대여 기간 구하기 \n",
+    "-- https://school.programmers.co.kr/learn/courses/30/lessons/157342\n",
+    "SELECT\n",
+    "    CAR_ID,\n",
+    "    ROUND(AVG(DATEDIFF(END_DATE, START_DATE) + 1 ) , 1) AS AVERAGE_DURATION\n",
+    "FROM \n",
+    "    CAR_RENTAL_COMPANY_RENTAL_HISTORY\n",
+    "GROUP BY\n",
+    "    CAR_ID\n",
+    "HAVING \n",
+    "    AVERAGE_DURATION >= 7\n",
+    "ORDER BY\n",
+    "    AVERAGE_DURATION DESC,\n",
+    "    CAR_ID DESC;\n",
     "```"
    ]
   },
@@ -111,47 +238,136 @@
    "execution_count": null,
    "id": "d4d305b0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "52\n"
+     ]
+    }
+   ],
    "source": [
     "# 1. 알고(시뮬): 백준 17140 (이차원 배열과 연산) - https://www.acmicpc.net/problem/17140\n",
     "import sys\n",
+    "from collections import Counter\n",
+    "from itertools import islice\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''1 2 4\n",
+    "1 2 1\n",
+    "2 1 3\n",
+    "3 3 3''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    r, c, k = map(int, input().split())\n",
+    "    board = [list(map(int, input().split())) for _ in range(3)]\n",
     "\n",
-    "    pass\n",
+    "    def R(board):\n",
+    "        max_row_len = 0\n",
+    "        results = []\n",
+    "\n",
+    "        for row in board:\n",
+    "            count = Counter(row)\n",
+    "            count.pop(0, None)  # 0 제거\n",
+    "            sorted_lst = sorted(count.items(), key=lambda x: (x[1], x[0])) # 갯수 -> 숫자 순 정렬\n",
+    "\n",
+    "            row_result = []\n",
+    "            for num, cnt in islice(sorted_lst, 50):\n",
+    "                row_result.extend([num, cnt])\n",
+    "\n",
+    "            results.append(row_result)\n",
+    "            max_row_len = max(max_row_len, len(row_result))  # 결과값중 가장 긴 값 저장.\n",
+    "\n",
+    "        new_board = [[0] * max_row_len for _ in range(len(board))]\n",
+    "\n",
+    "        for i, result in enumerate(results):  # 배열 생성.\n",
+    "            new_board[i][:len(result)] = result\n",
+    "\n",
+    "        return new_board\n",
+    "\n",
+    "    def C(board):\n",
+    "        transposed = list(zip(*board))\n",
+    "        new_list = R(transposed)\n",
+    "        recovered = list(map(list, zip(*new_list)))  # 리스트 형태로 복원.\n",
+    "        return recovered\n",
+    "\n",
+    "    check_board = board\n",
+    "\n",
+    "    for i in range(101):\n",
+    "        row_len = len(check_board)\n",
+    "        col_len = len(check_board[0])\n",
+    "\n",
+    "        if r <= row_len and c <= col_len and check_board[r-1][c-1] == k:\n",
+    "            print(i)\n",
+    "            break\n",
+    "\n",
+    "        if row_len >= col_len:\n",
+    "            check_board = R(check_board)\n",
+    "        else:\n",
+    "            check_board = C(check_board)\n",
+    "\n",
+    "    else:\n",
+    "        print(-1)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 123,
    "id": "44b2c219",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
    "source": [
     "# 2. 알고(DP): 백준 11054 (가장 긴 바이토닉 부분 수열) - https://www.acmicpc.net/problem/11054\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''10\n",
+    "1 5 2 1 4 3 4 5 2 1''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    n = int(input())\n",
+    "    nums = tuple(map(int, input().split()))\n",
+    "\n",
+    "    # 자신을 포함해서 왼쪽에 나보다 작은 수의 개수\n",
+    "    dp_up = [1] * n\n",
+    "    for i in range(n):\n",
+    "        for j in range(i):\n",
+    "            if nums[j] < nums[i]:\n",
+    "                dp_up[i] = max(dp_up[i], dp_up[j] + 1)\n",
+    "\n",
+    "    dp_down = [1] * n\n",
+    "    for i in range(n-1, -1, -1):\n",
+    "        for j in range(n-1, i, -1):\n",
+    "            if nums[j] < nums[i]:\n",
+    "                dp_down[i] = max(dp_down[i], dp_down[j] + 1)\n",
+    "\n",
+    "    max_len = 0\n",
+    "    for i in range(n):\n",
+    "        max_len = max(max_len, dp_up[i] + dp_down[i] - 1)  # 자기 자신 제외\n",
+    "\n",
+    "    print(max_len)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -159,23 +375,70 @@
    "execution_count": null,
    "id": "7310d5de",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "45\n"
+     ]
+    }
+   ],
    "source": [
     "# 3. 알고(트리): 백준 1967 (트리의 지름) - https://www.acmicpc.net/problem/1967\n",
     "import sys\n",
+    "from collections import deque\n",
+    "from random import randint\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''12\n",
+    "1 2 3\n",
+    "1 3 2\n",
+    "2 4 5\n",
+    "3 5 11\n",
+    "3 6 9\n",
+    "4 7 1\n",
+    "4 8 7\n",
+    "5 9 15\n",
+    "5 10 4\n",
+    "6 11 6\n",
+    "6 12 10''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    n = int(input())\n",
+    "    tree = [[] for _ in range(n + 1)]\n",
     "\n",
-    "    pass\n",
+    "    for _ in range(n-1):\n",
+    "        a, b, c = map(int, input().split())\n",
+    "        tree[a].append((b, c))\n",
+    "        tree[b].append((a, c))\n",
+    "\n",
+    "    def bfs(start):\n",
+    "\n",
+    "        dists = [-1] * (n+1)\n",
+    "        dists[start] = 0\n",
+    "\n",
+    "        dq = deque([start])  # 노드번호\n",
+    "        while dq:\n",
+    "            cur = dq.popleft()\n",
+    "\n",
+    "            for nxt, cost in tree[cur]:\n",
+    "                if dists[nxt] == -1:\n",
+    "                    dists[nxt] = dists[cur] + cost\n",
+    "                    dq.append(nxt)\n",
+    "\n",
+    "        return max((d, i) for i, d in enumerate(dists))\n",
+    "\n",
+    "    _, max_node = bfs(randint(1, n))    # 무작위로 하나 넣고\n",
+    "    max_dist, _ = bfs(max_node)         # 제일 멀리 있는 노드에서 다시 탐색\n",
+    "\n",
+    "    print(max_dist)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -183,23 +446,89 @@
    "execution_count": null,
    "id": "f78dd7c6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. 알고(백트래킹): 백준 16197 (두 동전) - https://www.acmicpc.net/problem/16197\n",
     "import sys\n",
+    "from itertools import product\n",
+    "from collections import deque\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''6 2\n",
+    "..\n",
+    "..\n",
+    "..\n",
+    "o#\n",
+    "o#\n",
+    "##''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    N, M = map(int, input().split())\n",
     "\n",
-    "    pass\n",
+    "    board = [['e'] * (M + 2)]\n",
+    "    for _ in range(N):\n",
+    "        board.append(['e'] + list(input().rstrip()) + ['e'])\n",
+    "    board.append(['e'] * (M + 2))\n",
+    "\n",
+    "    cur_coins = []      # [r1, c1, r2, c2]\n",
+    "    for r, c in product(range(1, N+1), range(1, M + 1)):\n",
+    "        if board[r][c] == 'o':\n",
+    "            cur_coins.extend([r, c])\n",
+    "\n",
+    "    directions = [(0, -1), (0, +1), (-1, 0), (+1, 0)]\n",
+    "\n",
+    "    dq = deque([tuple(cur_coins + [0])])  # 거리 하나 추가.\n",
+    "    visited = set(tuple(cur_coins))\n",
+    "\n",
+    "    while dq:\n",
+    "        r1, c1, r2, c2, dist = dq.popleft()\n",
+    "        \n",
+    "        if dist == 10: # 11번째 이동을 고려하기 시작할 때 종료.\n",
+    "            break\n",
+    "\n",
+    "        dist += 1       # 단계 추가.\n",
+    "        for dr, dc in directions:\n",
+    "            nr1, nc1 = r1 + dr, c1 + dc\n",
+    "            nr2, nc2 = r2 + dr, c2 + dc\n",
+    "\n",
+    "            nxt1 = board[nr1][nc1]\n",
+    "            nxt2 = board[nr2][nc2]\n",
+    "\n",
+    "            drop1 = (nxt1 == 'e')\n",
+    "            drop2 = (nxt2 == 'e')\n",
+    "\n",
+    "            if drop1 and drop2:   # 둘다 낭떨어지면 패스\n",
+    "                continue\n",
+    "\n",
+    "            if drop1 or drop2:    # 하나만 낭 떨어지면 성공!\n",
+    "                print(dist)\n",
+    "                return\n",
+    "\n",
+    "            if nxt1 == \"#\":       # 벽이면 다음 위치를 이전 위치로 복귀\n",
+    "                nr1, nc1 = r1, c1\n",
+    "            if nxt2 == \"#\":\n",
+    "                nr2, nc2 = r2, c2\n",
+    "\n",
+    "            # 둘중 하나라도 이동할 수 있다면 (동전 겹치기 가능)\n",
+    "            if (nr1, nc1, nr2, nc2) not in visited:\n",
+    "                dq.append((nr1, nc1, nr2, nc2, dist))  # 다음 단계 추가.\n",
+    "                visited.add((nr1, nc1, nr2, nc2))\n",
+    "\n",
+    "    print(-1)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -208,15 +537,55 @@
    "metadata": {},
    "source": [
     "```sql\n",
-    "-- 5. SQL(Lv.4): 식품분류별 가장 비싼 식품의 정보 조회하기 - https://school.programmers.co.kr/learn/courses/30/lessons/131116\n",
-    "\n",
+    "-- 5. SQL(Lv.4): 식품분류별 가장 비싼 식품의 정보 조회하기 \n",
+    "-- https://school.programmers.co.kr/learn/courses/30/lessons/131116\n",
+    "WITH RP AS (\n",
+    "    SELECT \n",
+    "        CATEGORY,\n",
+    "        PRICE,\n",
+    "        PRODUCT_NAME,\n",
+    "        RANK() OVER (\n",
+    "            PARTITION BY\n",
+    "                CATEGORY\n",
+    "            ORDER BY\n",
+    "                PRICE DESC\n",
+    "            ) RANKING\n",
+    "    FROM \n",
+    "        FOOD_PRODUCT\n",
+    "    WHERE\n",
+    "        CATEGORY IN ('과자', '국', '김치', '식용유')\n",
+    ")\n",
+    "SELECT\n",
+    "    CATEGORY,\n",
+    "    PRICE AS MAX_PRICE,\n",
+    "    PRODUCT_NAME\n",
+    "FROM \n",
+    "    RP\n",
+    "WHERE\n",
+    "    RANKING = 1\n",
+    "ORDER BY\n",
+    "    MAX_PRICE DESC;\n",
     "```"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "251117_MathForPython",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
